# Pytab

./: .gitignore  GLOSSARIO.md  GLOSSARIO.md`.md  LICENSE.md  README.md  ROADMAP.md  USAGE.md  pyproject.toml  pytab_generate_datasets.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: test_variable_resolver.py
datasets/: correlation_dataset.csv  p_chart_dataset.csv  t_test_two_samples.csv  xbar_r_dataset.csv
docs/: architecture.md  dmaic_overview.md  modules.md  usage.md
notebooks/: PyTab_Validation.ipynb
pytab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pytab/charts/: control_chart.py  theme.py
pytab/io/: reader.py
pytab/reports/: pdf_report.py
pytab/stats/: __init__.py  descriptive.py  outliers.py
pytab/utils/: app_utils.py  schema.py
pytab_app/: __init__.py  streamlit_app(antigo).py  streamlit_app.py
pytab_app/fases/: __init__.py  analisar(antigo).py  analisar.py  controlar.py  medir(antigo).py  medir.py  melhorar.py
pytab_app/fases/analisar/: __init__.py  analisar.py  (+4 more)
pytab_app/modules/: __init__.py  aggregation.py  outliers.py  testes_estatisticos.py  trend_plot.py
pytab_datasets/: README_DATASETS.md  anova_dataset.csv  mixed_dataset.csv  normality_dataset.csv  outliers_dataset.csv  regression_dataset.csv  u_chart_dataset.csv
tests/: test_reader.py
validation/: analysis_specs.py  expected_results.json  test.py  validate_suite.py  validation_report.json
validation/datasets/: chi_square_dataset.csv  imr_dataset.csv  t_test_one_sample.csv  t_test_paired.csv
(+15 files in other folders)
